--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+capi-media-recorder (0.1.0-8) unstable; urgency=low
+
+  * update dependency
+  * Git: slp-source.sec.samsung.net:slp/api/recorder
+  * Tag: capi-media-recorder_0.1.0-8
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Wed, 14 Mar 2012 12:06:14 +0900
+
+capi-media-recorder (0.1.0-7) unstable; urgency=low
+
+  * new API added : mute , audio_level
+  * Git: slp-source.sec.samsung.net:slp/api/recorder
+  * Tag: capi-media-recorder_0.1.0-7
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Thu, 08 Mar 2012 17:43:04 +0900
+
+capi-media-recorder (0.1.0-6) unstable; urgency=low
+
+  * add static , change internal function name
+  * Git: slp-source.sec.samsung.net:slp/api/recorder
+  * Tag: capi-media-recorder_0.1.0-6
+
+ -- Seungkeun Lee <sngn.lee@samsung.com>  Mon, 20 Feb 2012 15:52:26 +0900
+
 capi-media-recorder (0.1.0-5) unstable; urgency=low
 
   * add so version
